# CG-Engine

./: .gitignore  CMakeLists.txt  OpenGlTests2.sln  OpenGlTests2.vcxproj  OpenGlTests2.vcxproj.filters  README.md  imgui.ini
CG_Engine/: CMakeLists.txt  conanfile.txt
CG_Engine/include/CG/: AGameObject.hpp  AppWindow.hpp  Camera.hpp  Color.hpp  Core.hpp  EntryPoint.hpp  Game.hpp  GameObject.hpp  InputManager.hpp  Material.hpp  RendererHelper.hpp  ShaderManager.hpp  Utils.hpp  Vector2.hpp  Vector3.hpp  Window.hpp
CG_Engine/include/CG/components/: CustomPhysicResolver.hpp  LateUpdateable.hpp  OnCollision.hpp  OnLateUpdate.hpp  OnUpdate.hpp  PointLight.hpp  Rigidbody.hpp  Transform.hpp  Updateable.hpp
CG_Engine/include/CG/components/collider/: PlaneCollider.hpp  SphereCollider.hpp
CG_Engine/include/CG/components/material/: MaterialSolid.hpp
CG_Engine/include/CG/components/renderer/: CubeRenderer.hpp  LineRenderer.hpp  MeshRenderer.hpp  PlaneRenderer.hpp  ShapeRenderer.hpp  SphereRenderer.hpp  _all.hpp
CG_Engine/include/CG/internal/: ColorVertex.hpp  ComponentGetter.hpp  Drawable.hpp  DrawableBuilder.hpp  GlError.hpp  Material.hpp  ShaderManager.hpp  ShaderProgram.hpp  Shaders.hpp  Texture.hpp  Vertex.hpp
CG_Engine/include/CG/internal/components/: ICollider.hpp  ToDelete.hpp
CG_Engine/include/CG/math/: Quaternion.hpp  Ray.hpp  Utility.hpp  Vector2.hpp  Vector3.hpp
CG_Engine/include/CG/physic/: PhysicSystem.hpp  Raycast.hpp  RaycastAlgo.inc
CG_Engine/include/CG/physic/collision/: collisionDetector.hpp  collisionResult.hpp
CG_Engine/include/CG/physic/collision/algo/: Col_Plane_Plane.inc  Col_Plane_Sphere.inc  Col_Sphere_Sphere.inc  Sphere.inc  _all.inc
CG_Engine/include/CG/physic/raycast/: Raycast.hpp
CG_Engine/include/CG/physic/raycast/algo/: Rc_Plane.inc  Rc_Sphere.inc  _all.inc
CG_Engine/include/CG/physic/raycastImpl/: RaycastPlane.inc  RaycastSphere.inc  all.inc
CG_Engine/include/CG/physic/rbConstraint/: GlobalResolverSystem.hpp  LocalResolver.hpp
CG_Engine/include/CG/physic/rbConstraint/algo/: Rb_Plane_Plane.inc  Rb_Plane_Sphere.inc  Rb_Sphere_Sphere.inc  _all.inc
CG_Engine/include/CG/prefabs/: Cube.hpp  Plane.hpp  PointLight.hpp  Sphere.hpp
CG_Engine/include/CG/rendering/: GLLine.hpp  GLTriangles.hpp  GLTrianglesBuilder.hpp  Material.hpp  RenderSystem.hpp  RendererHelper.hpp  ShaderProgram.hpp  Texture.hpp
CG_Engine/include/CG/rendering/materials/: Checkerboard.hpp  LineMaterial.hpp  MaterialSolid.hpp  MaterialTextured.hpp
CG_Engine/include/CG/ui/: imfilebrowser.h
CG_Engine/include/CG/utils/: Average.hpp  Random.hpp  glmMatrixFormat.hpp
CG_Engine/shaders/: checkerBoard.frag.glsl  checkerBoard.vert.glsl  frag.glsl  simpleLine.frag.glsl  simpleLine.vert.glsl  solid.frag.glsl  solid.vert.glsl  textured.frag.glsl  textured.vert.glsl  vert.glsl
CG_Engine/src/: AppWindow.cpp  Camera.cpp  Core.cpp  Game.cpp  GameObject.cpp  InputManager.cpp  Material.cpp  ShaderManager.cpp  Window.cpp
CG_Engine/src/components/: Rigidbody.cpp
CG_Engine/src/components/collider/: SphereCollider.cpp
CG_Engine/src/components/material/: MaterialSolid.cpp
CG_Engine/src/components/renderer/: Cube.cpp  CubeRenderer.cpp  MeshRenderer.cpp  Plane.cpp  PlaneRenderer.cpp  ShapeRenderer.cpp  Sphere.cpp  SphereRenderer.cpp
CG_Engine/src/internal/: Drawable.cpp  DrawableBuilder.cpp  GlError.cpp  ShaderManager.cpp  Texture.cpp
CG_Engine/src/math/: Ray.cpp  Utility.cpp
CG_Engine/src/physic/: PhysicSystem.cpp  Raycast.cpp
CG_Engine/src/prefabs/: Cube.cpp  Plane.cpp  PointLight.cpp  Sphere.cpp
CG_Engine/src/rendering/: GLLine.cpp  GLTrianglesBuilder.cpp  RenderSystem.cpp  ShaderManager.cpp  Texture.cpp
CG_Engine/src/rendering/materials/: Checkerboard.cpp  LineMaterial.cpp  MaterialSolid.cpp  MaterialTextured.cpp
Sandbox/: CMakeLists.txt
Sandbox/include/: AssetDir.hpp  BridgeFactory.hpp  Cube.hpp  LevelCreator.hpp  PongGame.hpp  Sandbox.hpp  Vertex.hpp
Sandbox/include/GameObjects/: AnchorSpring.hpp  BuoyancyFApplier.hpp  Floor.hpp  FreeCamera.hpp  FreeCameraManager.hpp  Goal.hpp  Grid.hpp  HomeworkBall.hpp  InvisiblePlane.hpp  Mesh.hpp  PongBall.hpp  Spring.hpp  TestBall.hpp  TestCube.hpp  Tile.hpp  WaterCube.hpp
Sandbox/include/GameObjects/bullets/: Artillery.hpp  Fireball.hpp  Floating.hpp  Pistol.hpp  SmallMass.hpp
Sandbox/include/GameObjects/links/: AnchorCable.hpp  AnchorSpring.hpp  Cable.hpp  Rod.hpp  Spring.hpp
Sandbox/include/GameObjects/paddles/: AIPaddle.hpp  APaddle.hpp  PlayerPaddle.hpp
Sandbox/src/: BridgeFactory.cpp  Cube.cpp  LevelCreator.cpp  PongGame.cpp  Sandbox.cpp  main.cpp
Sandbox/src/GameObjects/: AnchorSpring.cpp  BuoyancyFApplier.cpp  Floor.cpp  FreeCamera.cpp  FreeCameraManager.cpp  Goal.cpp  Grid.cpp  HomeworkBall.cpp  InvisiblePlane.cpp  Mesh.cpp  PongBall.cpp  Spring.cpp  TestBall.cpp  TestCube.cpp  Tile.cpp  WaterCube.cpp
Sandbox/src/GameObjects/bullets/: Artillery.cpp  Fireball.cpp  Floating.cpp  Pistol.cpp  SmallMass.cpp
Sandbox/src/GameObjects/links/: AnchorCable.cpp  AnchorSpring.cpp  Cable.cpp  Rod.cpp  Spring.cpp
Sandbox/src/GameObjects/paddles/: AIPaddle.cpp  APaddle.cpp  PlayerPaddle.cpp
Shaders/: simple.frag  simple.vert
include/: AppWindow.hpp  Cube.hpp  ShaderManager.hpp
src/: AppWindow.cpp  Camera.cpp  ShaderManager.cpp  main.cpp
